--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
             <div class="col 12"></div>
             <div class="col 13"></div>
             <div class="col 14"></div>
-            <div class="col 15"></div>
-            <div class="col 16"></div>
-            <div class="col 17"></div>
+            <div class="col 15 black"></div>
+            <div class="col 16 black"></div>
+            <div class="col 17 black"></div>
             <div class="col 18"></div>
             <div class="col 19"></div>
             <div class="col 20"></div>
@@ -131,8 +131,8 @@
             <div class="col 23"></div>
             <div class="col 24"></div>
             <div class="col 25"></div>
-            <div class="col 26"></div>
-            <div class="col 27"></div>
+            <div class="col 26 black"></div>
+            <div class="col 27 black"></div>
             <div class="col 28"></div>
             <div class="col 29"></div>
             <div class="col 30"></div>
@@ -165,9 +165,9 @@
             <div class="col 10"></div>
             <div class="col 11"></div>
             <div class="col 12"></div>
-            <div class="col 13"></div>
-            <div class="col 14"></div>
-            <div class="col 15"></div>
+            <div class="col 13 black"></div>
+            <div class="col 14 black"></div>
+            <div class="col 15 black"></div>
             <div class="col 16"></div>
             <div class="col 17"></div>
             <div class="col 18"></div>
@@ -180,8 +180,8 @@
             <div class="col 25"></div>
             <div class="col 26"></div>
             <div class="col 27"></div>
-            <div class="col 28"></div>
-            <div class="col 29"></div>
+            <div class="col 28 black"></div>
+            <div class="col 29 black"></div>
             <div class="col 30"></div>
             <div class="col 31"></div>
             <div class="col 32"></div>
