--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> +
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div id="line-1" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">1</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -59,7 +59,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-2" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">2</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -106,7 +106,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-3" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">3</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -153,7 +153,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-4" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">4</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -200,7 +200,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-5" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">5</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -208,11 +208,11 @@
             <div class="col 6"></div>
             <div class="col 7"></div>
             <div class="col 8"></div>
-            <div class="col 9"></div>
-            <div class="col 10"></div>
-            <div class="col 11"></div>
-            <div class="col 12"></div>
-            <div class="col 13"></div>
+            <div class="col 9 black"></div>
+            <div class="col 10 black"></div>
+            <div class="col 11 black"></div>
+            <div class="col 12 black"></div>
+            <div class="col 13 black"></div>
             <div class="col 14"></div>
             <div class="col 15"></div>
             <div class="col 16"></div>
@@ -229,11 +229,11 @@
             <div class="col 27"></div>
             <div class="col 28"></div>
             <div class="col 29"></div>
-            <div class="col 30"></div>
-            <div class="col 31"></div>
-            <div class="col 32"></div>
-            <div class="col 33"></div>
-            <div class="col 34"></div>
+            <div class="col 30 black"></div>
+            <div class="col 31 black"></div>
+            <div class="col 32 black"></div>
+            <div class="col 33 black"></div>
+            <div class="col 34 black"></div>
             <div class="col 35"></div>
             <div class="col 36"></div>
             <div class="col 37"></div>
@@ -247,15 +247,15 @@
             <div class="col 45"></div>
         </div>
         <div id="line-6" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">6</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
             <div class="col 5"></div>
             <div class="col 6"></div>
-            <div class="col 7"></div>
-            <div class="col 8"></div>
-            <div class="col 9"></div>
+            <div class="col 7 black"></div>
+            <div class="col 8 black"></div>
+            <div class="col 9 black"></div>
             <div class="col 10"></div>
             <div class="col 11"></div>
             <div class="col 12"></div>
@@ -281,8 +281,8 @@
             <div class="col 32"></div>
             <div class="col 33"></div>
             <div class="col 34"></div>
-            <div class="col 35"></div>
-            <div class="col 36"></div>
+            <div class="col 35 black"></div>
+            <div class="col 36 black"></div>
             <div class="col 37"></div>
             <div class="col 38"></div>
             <div class="col 39"></div>
@@ -294,19 +294,19 @@
             <div class="col 45"></div>
         </div>
         <div id="line-7" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">7</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
             <div class="col 5"></div>
-            <div class="col 6"></div>
+            <div class="col 6 black"></div>
             <div class="col 7"></div>
             <div class="col 8"></div>
             <div class="col 9"></div>
             <div class="col 10"></div>
             <div class="col 11"></div>
             <div class="col 12"></div>
-            <div class="col 13"></div>
+            <div class="col 13 black"></div>
             <div class="col 14"></div>
             <div class="col 15"></div>
             <div class="col 16"></div>
@@ -324,13 +324,13 @@
             <div class="col 28"></div>
             <div class="col 29"></div>
             <div class="col 30"></div>
-            <div class="col 31"></div>
+            <div class="col 31 black"></div>
             <div class="col 32"></div>
             <div class="col 33"></div>
             <div class="col 34"></div>
             <div class="col 35"></div>
             <div class="col 36"></div>
-            <div class="col 37"></div>
+            <div class="col 37 black"></div>
             <div class="col 38"></div>
             <div class="col 39"></div>
             <div class="col 40"></div>
@@ -341,11 +341,11 @@
             <div class="col 45"></div>
         </div>
         <div id="line-8" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">8</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
-            <div class="col 5"></div>
+            <div class="col 5 black"></div>
             <div class="col 6"></div>
             <div class="col 7"></div>
             <div class="col 8"></div>
@@ -353,7 +353,7 @@
             <div class="col 10"></div>
             <div class="col 11"></div>
             <div class="col 12"></div>
-            <div class="col 13"></div>
+            <div class="col 13 black"></div>
             <div class="col 14"></div>
             <div class="col 15"></div>
             <div class="col 16"></div>
@@ -372,13 +372,13 @@
             <div class="col 29"></div>
             <div class="col 30"></div>
             <div class="col 31"></div>
-            <div class="col 32"></div>
+            <div class="col 32 black"></div>
             <div class="col 33"></div>
             <div class="col 34"></div>
             <div class="col 35"></div>
             <div class="col 36"></div>
             <div class="col 37"></div>
-            <div class="col 38"></div>
+            <div class="col 38 black"></div>
             <div class="col 39"></div>
             <div class="col 40"></div>
             <div class="col 41"></div>
@@ -388,18 +388,18 @@
             <div class="col 45"></div>
         </div>
         <div id="line-9" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">9</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
-            <div class="col 4"></div>
+            <div class="col 4 black"></div>
             <div class="col 5"></div>
             <div class="col 6"></div>
             <div class="col 7"></div>
             <div class="col 8"></div>
             <div class="col 9"></div>
             <div class="col 10"></div>
-            <div class="col 11"></div>
-            <div class="col 12"></div>
+            <div class="col 11 black"></div>
+            <div class="col 12 black"></div>
             <div class="col 13"></div>
             <div class="col 14"></div>
             <div class="col 15"></div>
@@ -419,14 +419,14 @@
             <div class="col 29"></div>
             <div class="col 30"></div>
             <div class="col 31"></div>
-            <div class="col 32"></div>
+            <div class="col 32 black"></div>
             <div class="col 33"></div>
             <div class="col 34"></div>
             <div class="col 35"></div>
             <div class="col 36"></div>
             <div class="col 37"></div>
             <div class="col 38"></div>
-            <div class="col 39"></div>
+            <div class="col 39 black"></div>
             <div class="col 40"></div>
             <div class="col 41"></div>
             <div class="col 42"></div>
@@ -435,9 +435,9 @@
             <div class="col 45"></div>
         </div>
         <div id="line-10" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">10</div>
             <div class="col 2"></div>
-            <div class="col 3"></div>
+            <div class="col 3 black"></div>
             <div class="col 4"></div>
             <div class="col 5"></div>
             <div class="col 6"></div>
@@ -445,14 +445,14 @@
             <div class="col 8"></div>
             <div class="col 9"></div>
             <div class="col 10"></div>
-            <div class="col 11"></div>
+            <div class="col 11 black"></div>
             <div class="col 12"></div>
             <div class="col 13"></div>
             <div class="col 14"></div>
             <div class="col 15"></div>
-            <div class="col 16"></div>
-            <div class="col 17"></div>
-            <div class="col 18"></div>
+            <div class="col 16 black"></div>
+            <div class="col 17 black"></div>
+            <div class="col 18 black"></div>
             <div class="col 19"></div>
             <div class="col 20"></div>
             <div class="col 21"></div>
@@ -460,21 +460,21 @@
             <div class="col 23"></div>
             <div class="col 24"></div>
             <div class="col 25"></div>
-            <div class="col 26"></div>
-            <div class="col 27"></div>
-            <div class="col 28"></div>
+            <div class="col 26 black"></div>
+            <div class="col 27 black"></div>
+            <div class="col 28 black"></div>
             <div class="col 29"></div>
             <div class="col 30"></div>
             <div class="col 31"></div>
             <div class="col 32"></div>
-            <div class="col 33"></div>
+            <div class="col 33 black"></div>
             <div class="col 34"></div>
             <div class="col 35"></div>
             <div class="col 36"></div>
             <div class="col 37"></div>
             <div class="col 38"></div>
             <div class="col 39"></div>
-            <div class="col 40"></div>
+            <div class="col 40 black"></div>
             <div class="col 41"></div>
             <div class="col 42"></div>
             <div class="col 43"></div>
@@ -482,7 +482,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-11" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">11</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -529,7 +529,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-12" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">12</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -576,7 +576,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-13" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">13</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -623,7 +623,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-14" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">14</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -670,7 +670,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-15" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">15</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -717,7 +717,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-16" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">16</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -764,7 +764,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-17" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">17</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -811,7 +811,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-18" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">18</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -858,7 +858,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-19" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">19</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -905,7 +905,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-20" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">20</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -952,7 +952,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-21" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">21</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -999,7 +999,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-22" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">22</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -1046,7 +1046,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-23" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">23</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -1093,7 +1093,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-24" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">24</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -1140,7 +1140,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-25" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">25</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -1187,7 +1187,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-26" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">26</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -1234,7 +1234,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-27" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">27</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -1281,7 +1281,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-28" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">28</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -1328,7 +1328,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-29" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">29</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
@@ -1375,7 +1375,7 @@
             <div class="col 45"></div>
         </div>
         <div id="line-30" class="row">
-            <div class="col 1"></div>
+            <div class="col 1">30</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
             <div class="col 4"></div>
