Line 19 black done

--- a/index.html
+++ b/index.html
@@ -861,13 +861,13 @@
             <div class="col 1">19</div>
             <div class="col 2"></div>
             <div class="col 3"></div>
-            <div class="col 4"></div>
+            <div class="col 4 black"></div>
             <div class="col 5"></div>
             <div class="col 6"></div>
             <div class="col 7"></div>
-            <div class="col 8"></div>
+            <div class="col 8 black"></div>
             <div class="col 9"></div>
-            <div class="col 10"></div>
+            <div class="col 10 black"></div>
             <div class="col 11"></div>
             <div class="col 12"></div>
             <div class="col 13"></div>
@@ -891,12 +891,12 @@
             <div class="col 31"></div>
             <div class="col 32"></div>
             <div class="col 33"></div>
-            <div class="col 34"></div>
+            <div class="col 34 black"></div>
             <div class="col 35"></div>
-            <div class="col 36"></div>
-            <div class="col 37"></div>
-            <div class="col 38"></div>
-            <div class="col 39"></div>
+            <div class="col 36 black"></div>
+            <div class="col 37 black"></div>
+            <div class="col 38 black"></div>
+            <div class="col 39 black"></div>
             <div class="col 40"></div>
             <div class="col 41"></div>
             <div class="col 42"></div>
