--- a/index.html
+++ b/index.html
@@ -958,10 +958,10 @@
             <div class="col 4"></div>
             <div class="col 5"></div>
             <div class="col 6"></div>
-            <div class="col 7"></div>
+            <div class="col 7 black"></div>
             <div class="col 8"></div>
             <div class="col 9"></div>
-            <div class="col 10"></div>
+            <div class="col 10 black"></div>
             <div class="col 11"></div>
             <div class="col 12"></div>
             <div class="col 13"></div>
@@ -970,13 +970,13 @@
             <div class="col 16"></div>
             <div class="col 17"></div>
             <div class="col 18"></div>
-            <div class="col 19"></div>
-            <div class="col 20"></div>
-            <div class="col 21"></div>
-            <div class="col 22"></div>
-            <div class="col 23"></div>
-            <div class="col 24"></div>
-            <div class="col 25"></div>
+            <div class="col 19 black"></div>
+            <div class="col 20 black"></div>
+            <div class="col 21 black"></div>
+            <div class="col 22 black"></div>
+            <div class="col 23 black"></div>
+            <div class="col 24 black"></div>
+            <div class="col 25 black"></div>
             <div class="col 26"></div>
             <div class="col 27"></div>
             <div class="col 28"></div>
@@ -985,7 +985,7 @@
             <div class="col 31"></div>
             <div class="col 32"></div>
             <div class="col 33"></div>
-            <div class="col 34"></div>
+            <div class="col 34 black"></div>
             <div class="col 35"></div>
             <div class="col 36"></div>
             <div class="col 37"></div>
