Line 25 black done

--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
             <div class="col 8"></div>
             <div class="col 9"></div>
             <div class="col 10"></div>
-            <div class="col 11"></div>
+            <div class="col 11 black"></div>
             <div class="col 12"></div>
             <div class="col 13"></div>
             <div class="col 14"></div>
@@ -1161,7 +1161,7 @@
             <div class="col 19"></div>
             <div class="col 20"></div>
             <div class="col 21"></div>
-            <div class="col 22"></div>
+            <div class="col 22 black"></div>
             <div class="col 23"></div>
             <div class="col 24"></div>
             <div class="col 25"></div>
@@ -1170,8 +1170,8 @@
             <div class="col 28"></div>
             <div class="col 29"></div>
             <div class="col 30"></div>
-            <div class="col 31"></div>
-            <div class="col 32"></div>
+            <div class="col 31 black"></div>
+            <div class="col 32 black"></div>
             <div class="col 33"></div>
             <div class="col 34"></div>
             <div class="col 35"></div>
