--- a/index.html
+++ b/index.html
@@ -1291,11 +1291,11 @@
             <div class="col 8"></div>
             <div class="col 9"></div>
             <div class="col 10"></div>
-            <div class="col 11"></div>
-            <div class="col 12"></div>
-            <div class="col 13"></div>
-            <div class="col 14"></div>
-            <div class="col 15"></div>
+            <div class="col 11 black"></div>
+            <div class="col 12 black"></div>
+            <div class="col 13 black"></div>
+            <div class="col 14 black"></div>
+            <div class="col 15 black"></div>
             <div class="col 16"></div>
             <div class="col 17"></div>
             <div class="col 18"></div>
@@ -1308,11 +1308,11 @@
             <div class="col 25"></div>
             <div class="col 26"></div>
             <div class="col 27"></div>
-            <div class="col 28"></div>
-            <div class="col 29"></div>
-            <div class="col 30"></div>
-            <div class="col 31"></div>
-            <div class="col 32"></div>
+            <div class="col 28 black"></div>
+            <div class="col 29 black"></div>
+            <div class="col 30 black"></div>
+            <div class="col 31 black"></div>
+            <div class="col 32 black"></div>
             <div class="col 33"></div>
             <div class="col 34"></div>
             <div class="col 35"></div>
