--- a/index.html
+++ b/index.html
@@ -1341,7 +1341,7 @@
             <div class="col 11 black"></div>
             <div class="col 12"></div>
             <div class="col 13 black"></div>
-            <div class="col 14"></div>
+            <div class="col 14 blue"></div>
             <div class="col 15 black"></div>
             <div class="col 16 black"></div>
             <div class="col 17 black"></div>
@@ -1356,7 +1356,7 @@
             <div class="col 26 black"></div>
             <div class="col 27 black"></div>
             <div class="col 28 black"></div>
-            <div class="col 29"></div>
+            <div class="col 29 blue"></div>
             <div class="col 30 black"></div>
             <div class="col 31"></div>
             <div class="col 32 black"></div>
@@ -1389,20 +1389,20 @@
             <div class="col 12"></div>
             <div class="col 13"></div>
             <div class="col 14 black"></div>
-            <div class="col 15"></div>
-            <div class="col 16"></div>
-            <div class="col 17"></div>
-            <div class="col 18"></div>
-            <div class="col 19"></div>
+            <div class="col 15 blue"></div>
+            <div class="col 16 blue"></div>
+            <div class="col 17 blue"></div>
+            <div class="col 18 blue"></div>
+            <div class="col 19 blue"></div>
             <div class="col 20 black"></div>
             <div class="col 21"></div>
             <div class="col 22"></div>
             <div class="col 23 black"></div>
-            <div class="col 24"></div>
-            <div class="col 25"></div>
-            <div class="col 26"></div>
-            <div class="col 27"></div>
-            <div class="col 28"></div>
+            <div class="col 24 blue"></div>
+            <div class="col 25 blue"></div>
+            <div class="col 26 blue"></div>
+            <div class="col 27 blue"></div>
+            <div class="col 28 blue"></div>
             <div class="col 29 black"></div>
             <div class="col 30"></div>
             <div class="col 31"></div>
