Till line 8 done

--- a/index.html
+++ b/index.html
@@ -300,36 +300,36 @@
             <div class="col 4"></div>
             <div class="col 5"></div>
             <div class="col 6 black"></div>
-            <div class="col 7"></div>
-            <div class="col 8"></div>
-            <div class="col 9"></div>
-            <div class="col 10"></div>
-            <div class="col 11"></div>
-            <div class="col 12"></div>
+            <div class="col 7 dark-brw"></div>
+            <div class="col 8 dark-brw"></div>
+            <div class="col 9 dark-brw"></div>
+            <div class="col 10 dark-brw"></div>
+            <div class="col 11 dark-brw"></div>
+            <div class="col 12 dark-brw"></div>
             <div class="col 13 black"></div>
-            <div class="col 14"></div>
-            <div class="col 15"></div>
-            <div class="col 16"></div>
-            <div class="col 17"></div>
-            <div class="col 18"></div>
-            <div class="col 19"></div>
-            <div class="col 20"></div>
-            <div class="col 21"></div>
-            <div class="col 22"></div>
-            <div class="col 23"></div>
-            <div class="col 24"></div>
-            <div class="col 25"></div>
-            <div class="col 26"></div>
-            <div class="col 27"></div>
-            <div class="col 28"></div>
-            <div class="col 29"></div>
-            <div class="col 30"></div>
+            <div class="col 14 light-brw"></div>
+            <div class="col 15 light-brw"></div>
+            <div class="col 16 light-brw"></div>
+            <div class="col 17 light-brw"></div>
+            <div class="col 18 light-brw"></div>
+            <div class="col 19 light-brw"></div>
+            <div class="col 20 light-brw"></div>
+            <div class="col 21 light-brw"></div>
+            <div class="col 22 light-brw"></div>
+            <div class="col 23 light-brw"></div>
+            <div class="col 24 light-brw"></div>
+            <div class="col 25 light-brw"></div>
+            <div class="col 26 light-brw"></div>
+            <div class="col 27 light-brw"></div>
+            <div class="col 28 light-brw"></div>
+            <div class="col 29 light-brw"></div>
+            <div class="col 30 light-brw"></div>
             <div class="col 31 black"></div>
-            <div class="col 32"></div>
-            <div class="col 33"></div>
-            <div class="col 34"></div>
-            <div class="col 35"></div>
-            <div class="col 36"></div>
+            <div class="col 32 dark-brw"></div>
+            <div class="col 33 dark-brw"></div>
+            <div class="col 34 dark-brw"></div>
+            <div class="col 35 dark-brw"></div>
+            <div class="col 36 dark-brw"></div>
             <div class="col 37 black"></div>
             <div class="col 38"></div>
             <div class="col 39"></div>
@@ -346,38 +346,38 @@
             <div class="col 3"></div>
             <div class="col 4"></div>
             <div class="col 5 black"></div>
-            <div class="col 6"></div>
-            <div class="col 7"></div>
-            <div class="col 8"></div>
-            <div class="col 9"></div>
-            <div class="col 10"></div>
-            <div class="col 11"></div>
-            <div class="col 12"></div>
+            <div class="col 6 dark-brw"></div>
+            <div class="col 7 dark-brw"></div>
+            <div class="col 8 dark-brw"></div>
+            <div class="col 9 dark-brw"></div>
+            <div class="col 10 dark-brw"></div>
+            <div class="col 11 dark-brw"></div>
+            <div class="col 12 dark-brw"></div>
             <div class="col 13 black"></div>
-            <div class="col 14"></div>
-            <div class="col 15"></div>
-            <div class="col 16"></div>
-            <div class="col 17"></div>
-            <div class="col 18"></div>
-            <div class="col 19"></div>
-            <div class="col 20"></div>
-            <div class="col 21"></div>
-            <div class="col 22"></div>
-            <div class="col 23"></div>
-            <div class="col 24"></div>
-            <div class="col 25"></div>
-            <div class="col 26"></div>
-            <div class="col 27"></div>
-            <div class="col 28"></div>
-            <div class="col 29"></div>
-            <div class="col 30"></div>
-            <div class="col 31"></div>
+            <div class="col 14 light-brw"></div>
+            <div class="col 15 light-brw"></div>
+            <div class="col 16 light-brw"></div>
+            <div class="col 17 light-brw"></div>
+            <div class="col 18 light-brw"></div>
+            <div class="col 19 light-brw"></div>
+            <div class="col 20 light-brw"></div>
+            <div class="col 21 light-brw"></div>
+            <div class="col 22 light-brw"></div>
+            <div class="col 23 light-brw"></div>
+            <div class="col 24 light-brw"></div>
+            <div class="col 25 light-brw"></div>
+            <div class="col 26 light-brw"></div>
+            <div class="col 27 light-brw"></div>
+            <div class="col 28 light-brw"></div>
+            <div class="col 29 light-brw"></div>
+            <div class="col 30 light-brw"></div>
+            <div class="col 31 light-brw"></div>
             <div class="col 32 black"></div>
-            <div class="col 33"></div>
-            <div class="col 34"></div>
-            <div class="col 35"></div>
-            <div class="col 36"></div>
-            <div class="col 37"></div>
+            <div class="col 33 dark-brw"></div>
+            <div class="col 34 dark-brw"></div>
+            <div class="col 35 dark-brw"></div>
+            <div class="col 36 dark-brw"></div>
+            <div class="col 37 dark-brw"></div>
             <div class="col 38 black"></div>
             <div class="col 39"></div>
             <div class="col 40"></div>
