--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head> +
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1362,6 +1362,53 @@
             <div class="col 32 black"></div>
             <div class="col 33 black"></div>
             <div class="col 34"></div>
+            <div class="col 35"></div>
+            <div class="col 36"></div>
+            <div class="col 37"></div>
+            <div class="col 38"></div>
+            <div class="col 39"></div>
+            <div class="col 40"></div>
+            <div class="col 41"></div>
+            <div class="col 42"></div>
+            <div class="col 43"></div>
+            <div class="col 44"></div>
+            <div class="col 45"></div>
+        </div>
+        <div id="line-30" class="row">
+            <div class="col 1"></div>
+            <div class="col 2"></div>
+            <div class="col 3"></div>
+            <div class="col 4"></div>
+            <div class="col 5"></div>
+            <div class="col 6"></div>
+            <div class="col 7"></div>
+            <div class="col 8"></div>
+            <div class="col 9 black"></div>
+            <div class="col 10 black"></div>
+            <div class="col 11 light-brw"></div>
+            <div class="col 12 light-brw"></div>
+            <div class="col 13 light-brw"></div>
+            <div class="col 14 black"></div>
+            <div class="col 15 blue"></div>
+            <div class="col 16 blue"></div>
+            <div class="col 17 blue"></div>
+            <div class="col 18 blue"></div>
+            <div class="col 19 blue"></div>
+            <div class="col 20 black"></div>
+            <div class="col 21 light-brw"></div>
+            <div class="col 22 light-brw"></div>
+            <div class="col 23 black"></div>
+            <div class="col 24 blue"></div>
+            <div class="col 25 blue"></div>
+            <div class="col 26 blue"></div>
+            <div class="col 27 blue"></div>
+            <div class="col 28 blue"></div>
+            <div class="col 29 black"></div>
+            <div class="col 30 light-brw"></div>
+            <div class="col 31 light-brw"></div>
+            <div class="col 32 light-brw"></div>
+            <div class="col 33 black"></div>
+            <div class="col 34 black"></div>
             <div class="col 35"></div>
             <div class="col 36"></div>
             <div class="col 37"></div>
